--- a/Part 3/Part 3.ipynb
+++ b/Part 3/Part 3.ipynb
@@ -11,247 +11,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'shiny' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'twitteR' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'rtweet' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'ggmap' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'maptools' successfully unpacked and MD5 sums checked\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"cannot remove prior installation of package 'maptools'\""
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'maps' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n",
-      "also installing the dependency 'gridExtra'\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'gridExtra' successfully unpacked and MD5 sums checked\n",
-      "package 'viridis' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'ggthemes' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n",
-      "Warning message:\n",
-      "\"package 'fiftystater' is not available (for R version 3.5.1)\"Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
-      "(as 'lib' is unspecified)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'reshape2' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "install.packages(\"shiny\", repos = \"http://cran.us.r-project.org\")\n",
-    "install.packages(\"twitteR\", repos = \"http://cran.us.r-project.org\")\n",
-    "install.packages(\"rtweet\", repos = \"http://cran.us.r-project.org\")\n",
-    "install.packages(\"ggmap\", repos = \"http://cran.us.r-project.org\")\n",
-    "install.packages(\"maptools\", repos = \"http://cran.us.r-project.org\")\n",
-    "install.packages(\"maps\", repos = \"http://cran.us.r-project.org\")\n",
-    "install.packages(\"viridis\", repos = \"http://cran.us.r-project.org\")\n",
-    "install.packages(\"ggthemes\", repos = \"http://cran.us.r-project.org\")\n",
-    "install.packages(\"fiftystater\", repos = \"http://cran.us.r-project.org\")\n",
-    "install.packages(\"reshape2\", repos = \"http://cran.us.r-project.org\")"
+    "# Necessary Packages\n",
+    "# install.packages(\"shiny\")\n",
+    "# install.packages(\"twitteR\")\n",
+    "# install.packages(\"rtweet\")\n",
+    "# install.packages(\"ggmap\")\n",
+    "# install.packages(\"maptools\")\n",
+    "# install.packages(\"maps\")\n",
+    "# install.packages(\"viridis\")\n",
+    "# install.packages(\"ggthemes\")\n",
+    "# install.packages(\"fiftystater\")\n",
+    "# install.packages(\"reshape2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"package 'shiny' was built under R version 3.5.2\"Warning message:\n",
-      "\"package 'twitteR' was built under R version 3.5.2\"Warning message:\n",
-      "\"package 'rtweet' was built under R version 3.5.2\"\n",
-      "Attaching package: 'rtweet'\n",
-      "\n",
-      "The following object is masked from 'package:twitteR':\n",
-      "\n",
-      "    lookup_statuses\n",
-      "\n",
-      "Warning message:\n",
-      "\"package 'ggmap' was built under R version 3.5.2\"Loading required package: ggplot2\n",
-      "Warning message:\n",
-      "\"package 'ggplot2' was built under R version 3.5.2\"Google's Terms of Service: https://cloud.google.com/maps-platform/terms/.\n",
-      "Please cite ggmap if you use it! See citation(\"ggmap\") for details.\n",
-      "Warning message:\n",
-      "\"package 'maptools' was built under R version 3.5.2\"Loading required package: sp\n",
-      "Warning message:\n",
-      "\"package 'sp' was built under R version 3.5.2\"Checking rgeos availability: FALSE\n",
-      " \tNote: when rgeos is not available, polygon geometry \tcomputations in maptools depend on gpclib,\n",
-      " \twhich has a restricted licence. It is disabled by default;\n",
-      " \tto enable gpclib, type gpclibPermit()\n"
-     ]
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "Error in library(viridis): there is no package called 'viridis'\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(viridis): there is no package called 'viridis'\nTraceback:\n",
-      "1. library(viridis)",
-      "2. stop(txt, domain = NA)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# All libraries\n",
     "library(shiny)\n",
@@ -35301,7 +35080,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.1"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
