--- a/Part 2/palLab1Part2.ipynb
+++ b/Part 2/palLab1Part2.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Shiva Pal\n",
+    "Teammate: Brian Cheung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Lab 1 Part 2:"
    ]
   },
@@ -533,7 +541,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
